--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,33 @@
 <html lang=en>
     <head>
         <title>Mafia redux</title>
-        <link rel='stylesheet' type='text/css' src='/style.css' />
-        <script src='/jquery-3.6.0.min.js' defer></script>
+        <link rel='stylesheet' type='text/css' href='style.css' />
+        <script src='jquery-3.6.0.min.js' defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-        <script src='/script.js' defer></script>
+        <script src='script.js' defer></script>
     </head>
     <body>
-        <h1>rooms</h1>
-        <div id=rooms></div>
+        <aside>
+            <img src='https://via.placeholder.com/700x300'/>
+        </aside>
+        <ul>
+            <li><span>Play</span></li>
+            <li><span>Host</span></li>
+            <li><span>About</span></li>
+        </ul>
+        <footer>
+            <a href='#'>
+                <figure>
+                <img src='https://via.placeholder.com/64x64'/>
+                <figcaption>NEWS</figcaption>
+                </figure>
+            </a>
+            <a href='#'>
+                <figure>
+                <img src='https://via.placeholder.com/64x64'/>
+                <figcaption>DISCORD</figcaption>
+                </figure>
+            </a>
+        </footer>
     </body>
 </html>
