--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
         <script src='/script.js' defer></script>
     </head>
-    <body>
+    <body footer>
         <aside>
             <img src='https://via.placeholder.com/700x300'/>
         </aside>
