--- a/static/index.html
+++ b/static/index.html
@@ -21,13 +21,13 @@
             <a href='#'>
                 <figure>
                 <img src='https://via.placeholder.com/64x64'/>
-                <figcaption>NEWS</figcaption>
+                <figcaption>News</figcaption>
                 </figure>
             </a>
             <a href='#'>
                 <figure>
                 <img src='https://via.placeholder.com/64x64'/>
-                <figcaption>DISCORD</figcaption>
+                <figcaption>Discord</figcaption>
                 </figure>
             </a>
         </footer>
