--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 
-<html lang=en>
+<html lang='en' prefix='https://ogp.me/ns/website#'>
     <head>
-        <title>Mafia redux</title>
+        <title>Yet Another Mafia Dedux</title>
+        <meta charset='utf-8'>
+        <meta name='viewport' content='width=device-width, user-scalable=no'>
+        <meta property='og:title' content='Yet Another Mafia Redux' />
+        <meta property='og:description content='Join other people in a game of heavily customizable mafia!' />
+        <meta property='og:type' content='website' />
+        <meta property='og:url' content='https://mafia-redux.herokuapp.com/' />
+        <meta property='og:image:url' content='https://via.placeholder.com/128x128.png' />
+        <meta property='og:image:secure_url' content='https://via.placeholder.com/128x128.png' />
+        <meta property='og:image:type' content='image/png' />
+        <meta property='og:image:width' content='128' />
+        <meta property='og:image:height' content='128' />
+        <meta property='og:image:alt' content='128x128' />
+        <meta property='og:determiner' content='' />
+        <meta property='og:locale' content='en_US' />
+        <meta property='og:site_name' content='Yet Another Mafia Redux' />
+        <meta name='DC.Title' content='Yet Another Mafia Redux' />
+        <meta name='DC.Creator' content='Otesunki' />
+        <meta name='DC.Subject' content='Mafia' />
+        <meta name='DC.Description' content='Join other people in a game of heavily customizable mafia!' />
+        <meta name='DC.Format' content='text/html' />
+        <meta name='DC.Language' content='en' />
+        <meta name='twitter:card' content='summar_large_image' />
+        <meta name='twitter:creator' content='@oderjunks' />
+        <meta name='description' content='Join other people in a game of heavily customizable mafia!' />
+        <meta name='keywords' content='mafia,online gaming,game' />
+        <meta name='robots' content='index,follow' />
+        <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400,700'>
         <link rel='stylesheet' type='text/css' href='/style.css' />
         <script src='/jquery-3.6.0.min.js' defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
         <script src='/script.js' defer></script>
     </head>
     <body footer>
         <aside>
-            <img src='https://via.placeholder.com/700x300'/>
+            <img src='https://via.placeholder.com/700x300.png'/>
         </aside>
         <ul>
             <li><span>Play</span></li>
@@ -20,13 +48,13 @@
         <footer>
             <a href='#'>
                 <figure>
-                <img src='https://via.placeholder.com/64x64'/>
+                <img src='https://via.placeholder.com/64x64.png'/>
                 <figcaption>News</figcaption>
                 </figure>
             </a>
             <a href='#'>
                 <figure>
-                <img src='https://via.placeholder.com/64x64'/>
+                <img src='https://via.placeholder.com/64x64.png'/>
                 <figcaption>Discord</figcaption>
                 </figure>
             </a>
