--- a/static/index.html
+++ b/static/index.html
@@ -2,10 +2,10 @@
 
 <html lang='en' prefix='https://ogp.me/ns/website#'>
     <head>
-        <title>1. Yet Another Mafia Dedux</title>
+        <title>Yet Another Mafia Dedux</title>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, user-scalable=no'>
-        <meta property='og:title' content='2. Yet Another Mafia Redux' />
+        <meta property='og:title' content='Join other people in a game of heavily customizable mafia!' />
         <meta property='og:description content='Join other people in a game of heavily customizable mafia!' />
         <meta property='og:type' content='website' />
         <meta property='og:url' content='https://mafia-redux.herokuapp.com/' />
@@ -17,8 +17,8 @@
         <meta property='og:image:alt' content='128x128' />
         <meta property='og:determiner' content='' />
         <meta property='og:locale' content='en_US' />
-        <meta property='og:site_name' content='3. Yet Another Mafia Redux' />
-        <meta name='DC.Title' content='4. Yet Another Mafia Redux' />
+        <meta property='og:site_name' content='Yet Another Mafia Redux' />
+        <meta name='DC.Title' content='Yet Another Mafia Redux' />
         <meta name='DC.Creator' content='Otesunki' />
         <meta name='DC.Subject' content='Mafia' />
         <meta name='DC.Description' content='Join other people in a game of heavily customizable mafia!' />
