--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 
 <html lang='en' prefix='https://ogp.me/ns/website#'>
     <head>
-        <title>Yet Another Mafia Dedux</title>
+        <title>Yet Another Mafia Redux</title>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, user-scalable=no'>
         <meta property='og:title' content='Join other people in a game of heavily customizable mafia!' />
