--- a/static/index.html
+++ b/static/index.html
@@ -41,9 +41,9 @@
             <img src='https://via.placeholder.com/700x300.png'/>
         </aside>
         <ul>
-            <li><span>Play</span></li>
-            <li><span>Host</span></li>
-            <li><span>About</span></li>
+            <li class='play'><span>Play</span></li>
+            <li class='host'><span>Host</span></li>
+            <li class='about'><span>About</span></li>
         </ul>
         <footer>
             <a href='#'>
