--- a/static/host.html
+++ b/static/host.html
@@ -33,30 +33,9 @@
         <link rel='stylesheet' type='text/css' href='/style.css' />
         <script src='/jquery-3.6.0.min.js' defer></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
-        <script src='/script.js' defer></script>
+        <script src='/host.css' defer></script>
     </head>
-    <body footer>
-        <aside>
-            <img src='https://via.placeholder.com/700x300.png'/>
-        </aside>
-        <ul>
-            <li class='play'><span>Play</span></li>
-            <li class='host'><span>Host</span></li>
-            <li class='about'><span>About</span></li>
-        </ul>
-        <footer>
-            <a href='#'>
-                <figure>
-                <img src='https://via.placeholder.com/64x64.png'/>
-                <figcaption>News</figcaption>
-                </figure>
-            </a>
-            <a href='#'>
-                <figure>
-                <img src='https://via.placeholder.com/64x64.png'/>
-                <figcaption>Discord</figcaption>
-                </figure>
-            </a>
-        </footer>
+    <body>
+        <div class=beam></div>
     </body>
 </html>
