--- a/static/host.html
+++ b/static/host.html
@@ -36,6 +36,13 @@
         <script src='/host.js' defer></script>
     </head>
     <body>
-        <div class=beam></div>
+        <form class=beam>
+            <label for='roomname'>Room name:</label><br />
+            <input type='text' id='roomname' name='name' />
+            <input type='submit' value='Create' /><br />
+            <input type='checkbox' id='listed' name='listed' />
+            <label for='listed'>Listed?</label>
+            </label>
+        </form>
     </body>
 </html>
