--- a/static/host.html
+++ b/static/host.html
@@ -42,8 +42,8 @@
                 <label for='roomname'>Room name:</label><br />
                 <flex>
                     <input type='text' id='roomname' name='name' />
-                    <space />
-                    <input type='submit' value='Create' /><br />
+                    <space></space>
+                    <input type='submit' value='Create' />
                 </flex>
             </section>
             <section>
