--- a/static/host.html
+++ b/static/host.html
@@ -41,7 +41,7 @@
             <section>
                 <label for='roomname'>Room name:</label><br />
                 <flex>
-                    <input type='text' id='roomname' name='name' />
+                    <input type='text' id='roomname' name='name' autocomplete='off'/>
                     <space></space>
                     <input type='submit' value='Create' />
                 </flex>
