--- a/static/index.html
+++ b/static/index.html
@@ -31,10 +31,10 @@
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400,700'>
         <link rel='stylesheet' type='text/css' href='/style.css' />
-        <script async src='/jquery-3.6.0.min.js'></script>
+        <script defer src='/jquery-3.6.0.min.js'></script>
         <script async src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
-        <script src='/global.js' defer></script>
-        <script src='/script.js' defer></script>
+        <script defer src='/global.js'></script>
+        <script defer src='/script.js'></script>
     </head>
     <body footer>
         <aside>
