--- a/static/play.html
+++ b/static/play.html
@@ -23,7 +23,7 @@
         <meta name='DC.Description' content='Join other people in a game of heavily customizable mafia!' />
         <meta name='DC.Format' content='text/html' />
         <meta name='DC.Language' content='en' />
-        <meta name='twitter:card' content='summary_large_image' />
+        <meta name='twitter:card' content='summary' />
         <meta name='twitter:creator' content='@oderjunks' />
         <meta name='description' content='Join other people in a game of heavily customizable mafia!' />
         <meta name='keywords' content='mafia,online gaming,game' />
