--- a/static/specificgame.html
+++ b/static/specificgame.html
@@ -40,8 +40,8 @@
         <div class='chat'></div>
         <div class='setup'></div>
         <form class='input'>
+            <input type='submit' value='Say' disabled />
             <input type='text' />
-            <input type='submit' value='Send' disabled />
         </form>
     </body>
 </html>
