--- a/static/specificgame.html
+++ b/static/specificgame.html
@@ -29,7 +29,9 @@
         <meta name='keywords' content='mafia,online gaming,game' />
         <meta name='robots' content='noindex,nofollow' />
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400,700'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel='stylesheet' type='text/css' href='/specific.css' />
         <script defer src='/jquery-3.6.0.min.js'></script>
         <script async src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
@@ -40,7 +42,7 @@
         <div class='chat'></div>
         <div class='setup'></div>
         <form class='input'>
-            <input type='submit' value='Say' disabled />
+            <input type='submit' value='Speak' disabled />
             <input type='text' />
         </form>
     </body>
