--- a/static/specificgame.html
+++ b/static/specificgame.html
@@ -38,7 +38,7 @@
         <script defer src='/specific.js'></script>
     </head>
     <body>
-        <div class='players'></div>
+        <!--div class='players'></div-->
         <div class='chat'></div>
         <div class='setup'></div>
         <form class='input'>
