--- a/static/under_renovation.html
+++ b/static/under_renovation.html
@@ -33,6 +33,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             body {
                 display: flex;
                 flex-direction: column;
@@ -42,6 +46,8 @@
                 color: #F1F7E2;
                 margin: 0;
                 font-family: 'Titillium Web', sans-serif;
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
