--- a/static/under_renovation.html
+++ b/static/under_renovation.html
@@ -41,7 +41,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-constent: center;
+                justify-content: center;
                 background-color: #121820;
                 color: #F1F7E2;
                 margin: 0;
