--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,7 @@
             <img src='https://via.placeholder.com/700x300.png'/>
         </aside>
         <ul>
+            <li class='login'><span>Login</span></li>
             <li class='play'><span>Play</span></li>
             <li class='host'><span>Host</span></li>
             <li class='about'><span>About</span></li>
