--- a/static/login.html
+++ b/static/login.html
@@ -47,7 +47,7 @@
             </section>
             <section>
                 <label for='password'>Password:</label><br />
-                <input type='text' id='password' name='password' autocomplete='off'/>
+                <input type='password' id='password' name='password' autocomplete='off'/>
             </section>
             <input type='submit' value='Login' formaction='/api/register'/>
             <input type='submit' value='Register' formaction='/api/login'/>
