--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
         <meta name='description' content='Join other people in a game of heavily customizable mafia!' />
         <meta name='keywords' content='mafia,online gaming,game' />
         <meta name='robots' content='index,follow' />
+        <meta name="google-site-verification" content="k7rotCgJA1r3Wg2RU2sctxvobGeQ27oRNnSPN2HUuCk" />
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
