--- a/static/play.html
+++ b/static/play.html
@@ -27,7 +27,7 @@
         <meta name='twitter:creator' content='@oderjunks' />
         <meta name='description' content='Join other people in a game of heavily customizable mafia!' />
         <meta name='keywords' content='mafia,online gaming,game' />
-        <meta name='robots' content='index,follow' />
+        <meta name='robots' content='noindex,nofollow' />
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
