--- a/static/under_renovation.html
+++ b/static/under_renovation.html
@@ -27,7 +27,8 @@
         <meta name='twitter:creator' content='@oderjunks' />
         <meta name='description' content='Under construction!' />
         <meta name='keywords' content='mafia,online gaming,game' />
-        <meta name='robots' content='index,follow' />
+        <meta name='robots' content='noindex,follow' />
+        <meta name="google-site-verification" content="k7rotCgJA1r3Wg2RU2sctxvobGeQ27oRNnSPN2HUuCk" />
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,5 +56,6 @@
         <h1>Ooof!</h1>
         <p>Mafia redux is under construction, so <i>please</i> avoid using it!</p>
         <p>If you must use mafia redux, click <a href='/index.html'>here</a> to bypass this safeguard</p>
+        <a hidden href='index.html'/>
     </body>
 </html>
