--- a/static/under_renovation.html
+++ b/static/under_renovation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='en' prefix='https://ogp.me/ns/website#'>
     <head>
-        <title>Yet Another Mafia Redux</title>
+        <title>1. Yet Another Mafia Redux</title>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, user-scalable=no'>
-        <meta property='og:title' content='Under construction!' />
-        <meta property='og:description content='Under construction!' />
+        <meta property='og:title' content='2. Under construction!' />
+        <meta property='og:description content='3. Under construction!' />
         <meta property='og:type' content='website' />
         <meta property='og:url' content='https://mafia-redux.herokuapp.com/' />
         <meta property='og:image:url' content='https://via.placeholder.com/128x128.png' />
@@ -16,16 +16,16 @@
         <meta property='og:image:alt' content='128x128' />
         <meta property='og:determiner' content='' />
         <meta property='og:locale' content='en_US' />
-        <meta property='og:site_name' content='Yet Another Mafia Redux' />
-        <meta name='DC.Title' content='Yet Another Mafia Redux' />
+        <meta property='og:site_name' content='4. Yet Another Mafia Redux' />
+        <meta name='DC.Title' content='5. Yet Another Mafia Redux' />
         <meta name='DC.Creator' content='Otesunki' />
         <meta name='DC.Subject' content='Mafia' />
-        <meta name='DC.Description' content='Under construction!' />
+        <meta name='DC.Description' content='6. Under construction!' />
         <meta name='DC.Format' content='text/html' />
         <meta name='DC.Language' content='en' />
         <meta name='twitter:card' content='summary' />
         <meta name='twitter:creator' content='@oderjunks' />
-        <meta name='description' content='Under construction!' />
+        <meta name='description' content='7. Under construction!' />
         <meta name='keywords' content='mafia,online gaming,game' />
         <meta name='robots' content='noindex,follow' />
         <meta name="google-site-verification" content="k7rotCgJA1r3Wg2RU2sctxvobGeQ27oRNnSPN2HUuCk" />
