--- a/static/play.html
+++ b/static/play.html
@@ -32,7 +32,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel='stylesheet' type='text/css' href='/style.css' />
+        <link rel='stylesheet' type='text/css' href='/play.css' />
         <script defer src='/jquery-3.6.0.min.js'></script>
         <script async src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
         <script defer src='/global.js'></script>
