--- a/static/play.html
+++ b/static/play.html
@@ -38,7 +38,5 @@
         <script defer src='/global.js'></script>
         <script defer src='/play.js'></script>
     </head>
-    <body>
-        <ul></ul>
-    </body>
+    <body></body>
 </html>
